@@ -1,3 +1,9 @@
+2003-07-11  Don Porter  <dgp@users.sourceforge.net>
+
+        * library/package.tcl:  Corrected [pkg_mkIndex] bug reported on
+        comp.lang.tcl.  The indexer was searching for newly indexed packages
+        instead of newly provided packages.
+
 2003-07-04  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* doc/expr.n: Tighten up the wording of some operations. [Bug 758488]
